syntax = "proto3";

option java_multiple_files = true;
option java_package = "sep3.cineflix.grpc";
option java_outer_classname = "UserServiceProto";

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
  rpc GetUserByUsername (GetUserByUsernameRequest) returns (UserResponse);
  rpc GetUserById (GetUserByIdRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetAllUsers (GetAllUsersRequest) returns (GetAllUsersResponse);
}

message CreateUserRequest {
  string username = 1;
  string email = 2;
  string hashedPassword = 3;
  string userRole = 4;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByUsernameRequest {
  string username = 1;
}

message GetUserByIdRequest {
  int32 id = 1;
}

message UpdateUserRequest {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string hashedPassword = 4;
  string userRole = 5;
}

message DeleteUserRequest {
  int32 id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message GetAllUsersRequest {}

message GetAllUsersResponse {
  repeated UserResponse users = 1;
}

message UserResponse {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string hashedPassword = 4;
  string userRole = 5;
}